# EpidemicSimulator

./: CMakeLists.txt  EpidemicAnalysis.cpp  EpidemicAnalysis.h  EpidemicManager.cpp  EpidemicManager.h  Event.h  EventProcessor.h  GraphGenerator.h  Logger.h  ManipulaGrafo.cpp  ManipulaGrafo.h  Params.h  RandomGenerator.cpp  RandomGenerator.h  RandomWalk.cpp  RandomWalk.h  Simulator.cpp  Simulator.h  Utils.cpp  Utils.h  Vertex.cpp  Vertex.h  main.cpp
data/: OutputDirStructure.txt  Params.json  Params_anel.json  build
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-Release_static.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  Package-Release_static.bash  configurations.xml  licenseheader.txt  project.properties  project.xml
nbproject/private/: Makefile-variables.mk  configurations.xml  private.xml
